--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ body {
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #212121;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
