--- a/src/components/Sidebar/css/SidebarHeader.css
+++ b/src/components/Sidebar/css/SidebarHeader.css
@@ -14,7 +14,7 @@
 .line {
   width: 100%;
   height: 3px;
-  background-color: #433B24;
+  background-color: #212121;
   margin-bottom: 5px;
   transition: transform 0.3s ease;
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.4);
@@ -38,7 +38,7 @@
   left: 0;
   bottom: 0;
   width: 25vw;
-  background-color: #433b24;
+  background-color: #212121;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
