--- a/src/pages/css/createProductos.css
+++ b/src/pages/css/createProductos.css
@@ -14,7 +14,7 @@ form {
   flex-direction: column; /* Coloca los elementos en columna */
 }
 
-input, textarea, button {
+input, textarea, select, button {
   margin: 10px 0; /* Margen entre los elementos del formulario */
   padding: 10px; /* Espaciado interno de los elementos */
   font-size: 16px; /* Tamaño de fuente */
