--- a/src/pages/css/inicio.css
+++ b/src/pages/css/inicio.css
@@ -1,3 +1,26 @@
+.boton-contenedor {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 100px; /* Espacio entre el Header y el botón */
+  margin-right: 100px;
+}
+
+.agregar-producto-button {
+  padding: 8px 16px;
+  background-color: transparent; /* Fondo transparente */
+  color: #000; /* Texto negro */
+  border: 2px solid #ccc; /* Borde gris marcado */
+  border-radius: 4px;
+  text-decoration: none;
+  font-weight: bold;
+  transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+}
+
+.agregar-producto-button:hover {
+  transform: scale(1.05);
+  box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.15); /* Aumenta la sombra al pasar el mouse */
+}
+
 .contenedorInicio {
   display: grid;
   grid-template-rows: auto 1fr;
