--- a/src/pages/css/createProductos.css
+++ b/src/pages/css/createProductos.css
@@ -16,6 +16,16 @@
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Sombra para el formulario (opcional) */
   margin-top: 2%;
 }
+.movement-form-container {
+  max-width: 80%; /* Ancho máximo del formulario */
+  margin: 0 auto; /* Margen superior e inferior de 20px y centrado horizontalmente */
+  padding: 20px; /* Espaciado interno del formulario */
+  border: 1px solid #ccc; /* Borde para visualizar el formulario (opcional) */
+  border-radius: 8px; /* Esquinas redondeadas (opcional) */
+  background-color: #f9f9f9; /* Color de fondo (opcional) */
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Sombra para el formulario (opcional) */
+  margin-top: 2%;
+}
 
 form {
   display: flex; /* Usa flexbox para alinear los elementos */
